force-app/main/default/objects/Appointment__c/fields/HCP_Profile__c.field-meta.xml
<CustomField>
    <fullName>HCP_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HCP Profile</label>
    <referenceTo>HCP_Profile__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>