force-app/main/default/objects/Appointment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Appointment_Date__c</columns>
    <columns>HCP_Profile__c</columns>
    <columns>Patient_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>